<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/connect_to"/>
    <TextView
            android:id="@+id/name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:textStyle="bold"/>
    <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/host"/>
    <EditText
            android:id="@+id/host"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:editable="true"
            android:inputType="text"
            />
    <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/port"/>
    <EditText
            android:id="@+id/port"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:inputType="number"
            />
    <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/password"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:password="true"
            android:editable="true"
            android:inputType="textPassword"
            />
    <Button
            android:id="@+id/connect_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_connect"
            android:onClick="connect"
            />
</LinearLayout>

